[gd_scene load_steps=7 format=3 uid="uid://ww4b5m3e4m6r"]

[ext_resource type="Script" path="res://ProjectFallenKingdom/abilities/magic_circle/magic_circle_attack.gd" id="1_p2jen"]
[ext_resource type="Texture2D" uid="uid://caref7moyu0vm" path="res://ProjectFallenKingdom/abilities/magic_circle/magic_circle_big.png" id="2_5tmos"]

[sub_resource type="CircleShape2D" id="CircleShape2D_os8xo"]
radius = 98.0816

[sub_resource type="Animation" id="Animation_w4lyr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_74ohp"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.56667, 2.26667, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 4.71239, 6.26573]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5f3qq"]
_data = {
"RESET": SubResource("Animation_w4lyr"),
"idle": SubResource("Animation_74ohp")
}

[node name="MagicCircleAttack" type="Area2D"]
z_index = -2
position = Vector2(0, 50)
collision_layer = 0
collision_mask = 3
script = ExtResource("1_p2jen")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 50)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_5tmos")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 50)
shape = SubResource("CircleShape2D_os8xo")

[node name="DamageTickTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5f3qq")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
